--- a/jefe_carrera.html
+++ b/jefe_carrera.html
@@ -41,7 +41,7 @@
 
 				<nav id="menuNav">
 				<ul>
-		            	<li><a href="Index.html">ABC de Jefes de carrera</a></li>
+		            	<li><a href="index.html">ABC de Jefes de carrera</a></li>
 		            	<li><a href="src/html/menu.html">ABC de Profesores</a></li>
 		            	<li><a href="src/html/reservaciones.html">Reservación</a></li>
 		            	<li><a href="src/html/contacto.html">Contacto</a></li>
