--- a/jefe_carrera.html
+++ b/jefe_carrera.html
@@ -36,19 +36,31 @@
 
 
 
-			<div id="navegacion">
 
 
-				<nav id="menuNav">
-				<ul>
-		            	<li><a href="index.html">ABC de Jefes de carrera</a></li>
-		            	<li><a href="src/html/menu.html">ABC de Profesores</a></li>
-		            	<li><a href="src/html/reservaciones.html">Reservación</a></li>
-		            	<li><a href="src/html/contacto.html">Contacto</a></li>
-		            	<li><a href="src/html/nosotros.html">Nosotros</a></li>
-			           </ul>
-				</nav>
-			</div>
+<div id='cssmenu'>
+<ul>
+   <li><a href='#'><span>Home</span></a></li>
+   <li class='active has-sub'><a href='#'><span>Products</span></a>
+      <ul>
+         <li class='has-sub'><a href='#'><span>Product 1</span></a>
+            <ul>
+               <li><a href='#'><span>Sub Product</span></a></li>
+               <li class='last'><a href='#'><span>Sub Product</span></a></li>
+            </ul>
+         </li>
+         <li class='has-sub'><a href='#'><span>Product 2</span></a>
+            <ul>
+               <li><a href='#'><span>Sub Product</span></a></li>
+               <li class='last'><a href='#'><span>Sub Product</span></a></li>
+            </ul>
+         </li>
+      </ul>
+   </li>
+   <li><a href='#'><span>About</span></a></li>
+   <li class='last'><a href='#'><span>Contact</span></a></li>
+</ul>
+</div>
 
 
 
