cambio de menu el bueno

--- a/jefe_carrera.html
+++ b/jefe_carrera.html
@@ -32,36 +32,62 @@
 
 
 
-	<div id="menu">
+	<div id="menu1">
 
 
 
 
-
-<div id='cssmenu'>
+<div id="menu">
 <ul>
-   <li><a href='#'><span>Home</span></a></li>
-   <li class='active has-sub'><a href='#'><span>Products</span></a>
-      <ul>
-         <li class='has-sub'><a href='#'><span>Product 1</span></a>
-            <ul>
-               <li><a href='#'><span>Sub Product</span></a></li>
-               <li class='last'><a href='#'><span>Sub Product</span></a></li>
-            </ul>
-         </li>
-         <li class='has-sub'><a href='#'><span>Product 2</span></a>
-            <ul>
-               <li><a href='#'><span>Sub Product</span></a></li>
-               <li class='last'><a href='#'><span>Sub Product</span></a></li>
-            </ul>
-         </li>
-      </ul>
-   </li>
-   <li><a href='#'><span>About</span></a></li>
-   <li class='last'><a href='#'><span>Contact</span></a></li>
+  <li class="nivel1 primera"><a href="http://araudi.net/Desplegables/menu_desplegable8.html#" class="nivel1">Opción 1</a>
+<!--[if lte IE 6]><a href="#" class="nivel1ie">Opción 1<table class="falsa"><tr><td><![endif]-->
+	<ul>
+		<li class="primera"><a href="http://www.google.es/">Opción 1.1</a></li>
+		<li><a href="http://www.idplus.org/">idplus.org</a></li>
+	</ul>
+<!--[if lte IE 6]></td></tr></table></a><![endif]-->
+  </li>
+  <li class="nivel1"><a href="http://araudi.net/Desplegables/menu_desplegable8.html#" class="nivel1">Opción 2</a>
+<!--[if lte IE 6]><a href="#" class="nivel1ie">Opción 2<table class="falsa"><tr><td><![endif]-->
+	<ul>
+		<li class="primera"><a href="http://araudi.net/Desplegables/menu_desplegable8.html#">Opción 2.1</a></li>
+		<li><a href="http://araudi.net/Desplegables/menu_desplegable8.html#">Opción 2.2</a></li>
+		<li><a href="http://araudi.net/Desplegables/menu_desplegable8.html#">Opción 2.3</a></li>
+		<li><a href="http://araudi.net/Desplegables/menu_desplegable8.html#">Opción 2.4</a></li>
+		<li><a href="http://www.idplus.org/">idplus.org</a></li>
+	</ul>
+<!--[if lte IE 6]></td></tr></table></a><![endif]-->
+</li>
+  <li class="nivel1"><a href="http://araudi.net/Desplegables/menu_desplegable8.html#" class="nivel1">Opción 3</a>
+<!--[if lte IE 6]><a href="#" class="nivel1ie">Opción 3<table class="falsa"><tr><td><![endif]-->
+	<ul>
+		<li class="primera"><a href="http://araudi.net/Desplegables/menu_desplegable8.html#">Opción 3.1</a></li>
+		<li><a href="http://araudi.net/Desplegables/menu_desplegable8.html#">Opción 3.2</a></li>
+		<li><a href="http://www.idplus.org/">idplus.org</a></li>
+	</ul>
+<!--[if lte IE 6]></td></tr></table></a><![endif]-->
+</li>
+  <li class="nivel1"><a href="http://araudi.net/Desplegables/menu_desplegable8.html#" class="nivel1">Opción 4</a>
+<!--[if lte IE 6]><a href="#" class="nivel1ie">Opción 4<table class="falsa"><tr><td><![endif]-->
+	<ul>
+		<li class="primera"><a href="http://araudi.net/Desplegables/menu_desplegable8.html#">Opción 4.1</a></li>
+		<li><a href="http://araudi.net/Desplegables/menu_desplegable8.html#">Opción 4.2</a></li>
+		<li><a href="http://araudi.net/Desplegables/menu_desplegable8.html#">Opción 4.3</a></li>
+		<li><a href="http://www.idplus.org/">idplus.org</a></li>
+	</ul>
+<!--[if lte IE 6]></td></tr></table></a><![endif]-->
+</li>
+  <li class="nivel1"><a href="http://araudi.net/Desplegables/menu_desplegable8.html#" class="nivel1">Opción 5</a>
+<!--[if lte IE 6]><a href="#" class="nivel1ie">Opción 5<table class="falsa"><tr><td><![endif]-->
+	<ul>
+		<li class="primera"><a href="http://araudi.net/Desplegables/menu_desplegable8.html#">Opción 5.1</a></li>
+		<li><a href="http://araudi.net/Desplegables/menu_desplegable8.html#">Opción 5.2</a></li>
+		<li><a href="http://www.idplus.org/">idplus.org</a></li>
+	</ul>
+<!--[if lte IE 6]></td></tr></table></a><![endif]-->
+</li>
 </ul>
 </div>
-
 
 
 			<div id="areaDeTrabajo">
