agregue menu correcto

--- a/Index.html
+++ b/Index.html
@@ -13,9 +13,9 @@
 
 		if(formValidation && validarLogin()){
 			if(window.document.forms[0].usuario.value=="jefe"){
-				window.location="jefe_carrera.html";
+				window.location="IndexJefeCarrera.html";
 			}else if(window.document.forms[0].usuario.value=="profesor"){
-					window.location="profesor.html";
+					window.location="IndexProfesor.html";
 		}
 	}
 
