--- a/ConsultarJefesCarrera.html
+++ b/ConsultarJefesCarrera.html
@@ -7,11 +7,26 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/main.js" ></script>
 	<script type="text/javascript" src="js/menu.js" ></script>
+
+	<script src="js/alertify.min.js"></script>
+	<link rel="stylesheet" href="css/alertify.core.css" />
+	<link rel="stylesheet" href="css/alertify.default.css" />
+	<script src="js/dialogs.js"></script>
+
 	<meta charset="UTF-8">
 	<title>
 		Sistema de Asignación de Horarios y Salones
 	</title>
 	<link rel="shortcut icon" href="img/favicon.png" type="favicon/ico" />
+
+
+
+
+
+
+
+
+
 
 </head>
 
@@ -53,11 +68,11 @@
 						<li><a href="ConsultarAsignaturas.html">Eliminar</a></li>
 					</ul>
 				</li>
-  				<li class="nivel1"><a href="SolicitudAsignaturas.html">Solicitudes de asignaturas</a>	
+  				<li class="nivel1"><a href="SolicitudAsignaturas.html">Solicitudes de asignaturas</a>
 				</li>
-  				<li class="nivel1"><a href="SolicitudAsignaturasNuevas.html">Solicitudes de asignaturas nuevas</a>	
+  				<li class="nivel1"><a href="SolicitudAsignaturasNuevas.html">Solicitudes de asignaturas nuevas</a>
 				</li>
-				<li class="nivel1"><a>Lista Asignaturas-Profesor</a>	
+				<li class="nivel1"><a>Lista Asignaturas-Profesor</a>
 				</li>
 			</ul>
 		</div>
@@ -67,6 +82,108 @@
 			<center>
 				<h2> Area de trabajo </h2>
 			</center>
+
+
+			<h3 align="center">Catálogo de Materias</h3>
+		<center>
+		<table class="catalog">
+			<tr>
+				<td>
+					Id
+				</td>
+				<td>
+					Nombre
+				</td>
+				<td>
+					Clave
+				</td>
+				<td>
+					Descripción
+				</td>
+				<td>
+					Modificar
+				</td>
+				<td>
+					Eliminar
+				</td>
+			</tr>
+			<tr>
+				<td>
+					001
+				</td>
+				<td>
+					Matemáticas I
+				</td>
+				<td>
+					A01M001
+				</td>
+				<td>
+					Fundamentos Básicos de Algebra
+				</td>
+				<td>
+					<img class="button" src="img/edit-icon.png"  onclick="gotoModify();">
+				</td>
+				<td>
+					<img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Matemáticas I');">
+				</td>
+			</tr>
+			<tr>
+				<td>
+					002
+				</td>
+				<td>
+					Matemáticas II
+				</td>
+				<td>
+					A01M002
+				</td>
+				<td>
+					Fundamentos Avanzados de Algebra
+				</td>
+				<td>
+					<img class="button" src="img/edit-icon.png"  onclick="gotoModify();">
+				</td>
+				<td>
+					<img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Matemáticas II');">
+				</td>
+			</tr>
+			<tr>
+				<td>
+					003
+				</td>
+				<td>
+					Administración de proyectos
+				</td>
+				<td>
+					A02C001
+				</td>
+				<td>
+					Administración y gestión de proyectos alienados a PMBOK
+				</td>
+				<td>
+					<img class="button" src="img/edit-icon.png"  onclick="gotoModify();">
+				</td>
+				<td>
+					<img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');">
+				</td>
+			</tr>
+		</table>
+		<br>
+
+		<input type="button" value="Agregar" onclick="gotoAdd();"/>
+		</center>
+	</body>
+ </html>
+
+ <script>
+	function gotoAdd(){
+		window.location="AgregarJefesCarrera.html";
+	}
+
+//	function gotoModify(){
+//		window.location="E";
+//	}
+
 		</div>
 
 	</div>
