--- a/ConsultarJefesCarrera.html
+++ b/ConsultarJefesCarrera.html
@@ -31,9 +31,7 @@
 </head>
 
 <body>
-	<center>
-		<img id="banner" src="img/header.png" height="100%"/>
-	</center>
+<img src="img/header.png" style="width: 90%; margin-left: 5.5%;">
 
 	<div id="menu1">
 
