--- a/Index.html
+++ b/Index.html
@@ -52,9 +52,12 @@
 
 
 <body>
-<center>
-		<img id="banner" src="img/header.png" height="100%"/>
-		</center>
+<img src="img/header.png" style="width: 90%; margin-left: 5.5%;">
+
+<div id="navegacion"> 
+
+</div>
+
 
 <h1 align="center">
 Sistema de Asignacion de Grupos y Salones
