--- a/AgregarAsignaturas.html
+++ b/AgregarAsignaturas.html
@@ -22,10 +22,15 @@
 </head>
 
 <body>
-	<center>
-		<img id="banner" src="img/header.png" height="100%"/>
-	</center>
+	<img src="img/header.png" style="width: 90%; margin-left: 5.5%;">
 
+	<div id="navegacion"> 
+	<a id= "inicio" href="Index.html">Inicio</a>
+	<span id ="saludo">
+	Conectado como Jefe de carrera
+	</span>	
+	<a id = "salir" href="Index.html"> Salir </a>
+	</div>	
 	<div id="menu1">
 
 		<div id="menu">
@@ -122,9 +127,8 @@
 	</div>
 
 </body>
-<<<<<<< HEAD
-</html>
-=======
+
+
  <script>
 	function doSubmit(){
 		removeErrorMessages();
@@ -140,4 +144,4 @@
 
 
  </html>
->>>>>>> 8a65605ececa20f7b8fa4e4829ed15ae51218e26
+
