--- a/ConsultarSalones.html
+++ b/ConsultarSalones.html
@@ -65,7 +65,45 @@
 
 		<div id="areaDeTrabajo">
 			<center>
-				<h2> Area de trabajo </h2>
+				<h2>Salones</h2>
+				<table class="catalog">
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
 			</center>
 		</div>
 
