--- a/AgregarAsignaturas.html
+++ b/AgregarAsignaturas.html
@@ -24,13 +24,19 @@
 <body>
 	<img src="img/header.png" style="width: 90%; margin-left: 5.5%;">
 
-	<div id="navegacion"> 
+	<div id="navegacion">
+
 	<a id= "inicio" href="Index.html">Inicio</a>
+	<img  height="16" width="16" src="img/house.png">
 	<span id ="saludo">
 	Conectado como Jefe de carrera
-	</span>	
+	</span>
 	<a id = "salir" href="Index.html"> Salir </a>
-	</div>	
+	<img height="16" width="16" src="img/salir.png" style="/* margin-left: 1080px; */margin-right: -47px;float: right;">
+
+	</div>
+
+
 	<div id="menu1">
 
 		<div id="menu">
