imagen de salir y home

--- a/AgregarAsignaturas.html
+++ b/AgregarAsignaturas.html
@@ -32,7 +32,7 @@
 	Conectado como Jefe de carrera
 	</span>
 	<a id = "salir" href="Index.html"> Salir </a>
-	<img height="16" width="16" src="img/salir.png" style="/* margin-left: 1080px; */margin-right: -47px;float: right;">
+	<img height="16" width="16" src="img/salir.png" style="margin-right: -47px;float: right;">
 
 	</div>
 
