--- a/ConsultarHorarios.html
+++ b/ConsultarHorarios.html
@@ -25,7 +25,7 @@
 				<ul>
 					<li><a href="ConsultarJefesCarrera.html">Consultar</a></li>
 					<li><a href="AgregarJefesCarrera.html">Agregar</a></li>
-					<li><a href="ConsultarJefesCarrera.html">Editar</a></li>
+					<li><a href="EditarJefesCarrera.html">Editar</a></li>
 				</ul>
 			  	</li>
   				<li class="nivel1"><a>Profesores</a>
@@ -38,16 +38,16 @@
 					<ul>
 						<li><a href="ConsultarSalones.html">Consultar</a></li>
 						<li><a href="AgregarSalones.html">Agregar</a></li>
-						<li><a href="ConsultarSalones.html">Editar</a></li>
-						<li><a href="ConsultarSalones.html">Eliminar</a></li>
+						<li><a href="EditarSalones.html">Editar</a></li>
+						<li><a href="EditarSalones.html">Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a>Asignaturas</a>
 					<ul>
 						<li><a href="ConsultarAsignaturas.html">Consultar</a></li>
 						<li><a href="AgregarAsignaturas.html">Agregar</a></li>
-						<li><a href="ConsultarAsignaturas.html">Editar</a></li>
-						<li><a href="ConsultarAsignaturas.html">Eliminar</a></li>
+						<li><a href="EditarAsignaturas.html">Editar</a></li>
+						<li><a href="EditarAsignaturas.html">Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a href="SolicitudAsignaturas.html">Solicitudes de asignaturas</a>	
