--- a/ConsultarProfesores.html
+++ b/ConsultarProfesores.html
@@ -26,7 +26,7 @@
 				<ul>
 					<li><a href="ConsultarJefesCarrera.html">Consultar</a></li>
 					<li><a href="AgregarJefesCarrera.html">Agregar</a></li>
-					<li><a href="ConsultarJefesCarrera.html">Editar</a></li>
+					<li><a href="EditarJefesCarrera.html">Editar</a></li>
 				</ul>
 			  	</li>
   				<li class="nivel1"><a>Profesores</a>
@@ -39,16 +39,16 @@
 					<ul>
 						<li><a href="ConsultarSalones.html">Consultar</a></li>
 						<li><a href="AgregarSalones.html">Agregar</a></li>
-						<li><a href="ConsultarSalones.html">Editar</a></li>
-						<li><a href="ConsultarSalones.html">Eliminar</a></li>
+						<li><a href="EditarSalones.html">Editar</a></li>
+						<li><a href="EditarSalones.html">Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a>Asignaturas</a>
 					<ul>
 						<li><a href="ConsultarAsignaturas.html">Consultar</a></li>
 						<li><a href="AgregarAsignaturas.html">Agregar</a></li>
-						<li><a href="ConsultarAsignaturas.html">Editar</a></li>
-						<li><a href="ConsultarAsignaturas.html">Eliminar</a></li>
+						<li><a href="EditarAsignaturas.html">Editar</a></li>
+						<li><a href="EditarAsignaturas.html">Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a href="SolicitudAsignaturas.html">Solicitudes de asignaturas</a>
@@ -72,7 +72,7 @@
 					<td>Apellido paterno</td>
 					<td>Apellido materno</td>
 					<td>Contraseña</td>
-
+					<td>Estado</td>
 				</tr>
 				<tr>
 					<td>caen</td>
@@ -80,36 +80,40 @@
 					<td>Escalona</td>
 					<td>Navarro</td>
 					<td>12345</td>
-
+					<td>Activo</td>
 				</tr>
 				<tr>
 					<td>alex</td>
 					<td>Alejandro</td>
-					<td></td>
-					<td></td>
+					<td>Hernández</td>
+					<td>Calderón</td>
 					<td>12345</td>
+					<td>Inactivo</td>
 
 				</tr>
 				<tr>
-					<td>Fany</td>
+					<td>fany</td>
 					<td>Alejandra</td>
 					<td>Jaramillo</td>
 					<td>Sánchez</td>
 					<td>12345</td>
+					<td>Activo</td>
 				</tr>
 				<tr>
-					<td>Isma</td>
+					<td>isma</td>
 					<td>Ismael</td>
-					<td></td>
-					<td></td>
+					<td>Servín</td>
+					<td>Sandoval</td>
 					<td>12345</td>
+					<td>Activo</td>
 				</tr>
 				<tr>
+					<td>elias</td>
 					<td>Elias</td>
-					<td>Elias</td>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td>Jiménez</td>
+					<td>Cárdenas</td>
+					<td>12345</td>
+					<td>Inactivo</td>
 				</tr>
 			</table>
 		</div>
