--- a/ConsultarAsignaturas.html
+++ b/ConsultarAsignaturas.html
@@ -26,7 +26,7 @@
 				<ul>
 					<li><a href="ConsultarJefesCarrera.html">Consultar</a></li>
 					<li><a href="AgregarJefesCarrera.html">Agregar</a></li>
-					<li><a href="ConsultarJefesCarrera.html">Editar</a></li>
+					<li><a href="EditarJefesCarrera.html">Editar</a></li>
 				</ul>
 			  	</li>
   				<li class="nivel1"><a>Profesores</a>
@@ -39,16 +39,16 @@
 					<ul>
 						<li><a href="ConsultarSalones.html">Consultar</a></li>
 						<li><a href="AgregarSalones.html">Agregar</a></li>
-						<li><a href="ConsultarSalones.html">Editar</a></li>
-						<li><a href="ConsultarSalones.html">Eliminar</a></li>
+						<li><a href="EditarSalones.html">Editar</a></li>
+						<li><a href="EditarSalones.html">Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a>Asignaturas</a>
 					<ul>
 						<li><a href="ConsultarAsignaturas.html">Consultar</a></li>
 						<li><a href="AgregarAsignaturas.html">Agregar</a></li>
-						<li><a href="ConsultarAsignaturas.html">Editar</a></li>
-						<li><a href="ConsultarAsignaturas.html">Eliminar</a></li>
+						<li><a href="EditarAsignaturas.html">Editar</a></li>
+						<li><a href="EditarAsignaturas.html">Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a href="SolicitudAsignaturas.html">Solicitudes de asignaturas</a>	
@@ -67,40 +67,46 @@
 			</center>
 			<table class="catalog">
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td>Carrera</td>
+					<td>Nombre</td>
+					<td>Modalidad</td>
+					<td>Carácter</td>
+					<td>Horas al semestre</td>
+					<td>Horas a la semana</td>
+					<td>Horas teóricas</td>
+					<td>Horasprácticas</td>
+					<td>Horas de laboratorio</td>
+					<td>Créditos</td>
+					<td>Seriación</td>
+					<td>Seriación subsecuente</td>
+					<td>Seriación antecedente</td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td>Derecho</td>
+					<td>Derecho penal I</td>
+					<td>Taller</td>
+					<td>Obligatorio</td>
+					<td>80</td>
+					<td>5</td>
+					<td>70</td>
+					<td>10</td>
+					<td>00</td>
+					<td>si</td>
+					<td>Introducción al derecho</td>
+					<td>Derecho penal II</td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td>Matemáticas Aplicadas y Computación</td>
+					<td>Álgebra Superior I</td>
+					<td>Curso</td>
+					<td>Obligatorio</td>
+					<td>80</td>
+					<td>80</td>
+					<td>00</td>
+					<td>00</td>
+					<td>si</td>
+					<td>--</td>
+					<td>Algebra Superior II</td>
 				</tr>
 			</table>
 		</div>
