--- a/ConsultarJefesCarrera.html
+++ b/ConsultarJefesCarrera.html
@@ -30,7 +30,7 @@
 				<ul>
 					<li><a href="ConsultarJefesCarrera.html">Consultar</a></li>
 					<li><a href="AgregarJefesCarrera.html">Agregar</a></li>
-					<li><a href="ConsultarJefesCarrera.html">Editar</a></li>
+					<li><a href="EditarJefesCarrera.html">Editar</a></li>
 				</ul>
 			  	</li>
   				<li class="nivel1"><a>Profesores</a>
@@ -43,16 +43,16 @@
 					<ul>
 						<li><a href="ConsultarSalones.html">Consultar</a></li>
 						<li><a href="AgregarSalones.html">Agregar</a></li>
-						<li><a href="ConsultarSalones.html">Editar</a></li>
-						<li><a href="ConsultarSalones.html">Eliminar</a></li>
+						<li><a href="EditarSalones.html">Editar</a></li>
+						<li><a href="EditarSalones.html">Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a>Asignaturas</a>
 					<ul>
 						<li><a href="ConsultarAsignaturas.html">Consultar</a></li>
 						<li><a href="AgregarAsignaturas.html">Agregar</a></li>
-						<li><a href="ConsultarAsignaturas.html">Editar</a></li>
-						<li><a href="ConsultarAsignaturas.html">Eliminar</a></li>
+						<li><a href="EditarAsignaturas.html">Editar</a></li>
+						<li><a href="EditarAsignaturas.html">Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a href="SolicitudAsignaturas.html">Solicitudes de asignaturas</a>
@@ -91,7 +91,7 @@
 					<td>Iztapalapa</td>
 					<td>Naucalpan Col. Santa Cruz Acatlán</td>
 					<td>Jefe de carrera</td>
-					<td></td>
+					<td>Activo</td>
 				</tr>
 				<tr>
 					<td>Germán</td>
@@ -102,7 +102,7 @@
 					<td>Iztapalapa</td>
 					<td>Naucalpan Col. Santa Cruz Acatlán</td>
 					<td>Jefe de carrera</td>
-					<td></td>
+					<td>Activo</td>
 				</tr>
 			</table>
 
