--- a/EditarJefesCarrera.html
+++ b/EditarJefesCarrera.html
@@ -85,6 +85,9 @@
 
 	
 
+				<fieldset>
+
+				 <legend>Cuestionario:</legend>
 				
 					Nombre
 					<input type="text" size="15" required>
@@ -107,7 +110,6 @@
 
 
 
-				<fieldset>
 				<p>
 					<label for="web">Nivel Académico</label>
 					<input type="text"  size="30" required>
