--- a/AgregarProfesores.html
+++ b/AgregarProfesores.html
@@ -63,7 +63,7 @@
 
 		<div id="areaDeTrabajo">
 			<center>
-				<h2> Area de trabajo </h2>
+				<h2> Agregar Profesor </h2>
 			</center>
 		</div>
 
