--- a/ConsultarAsignaturas.html
+++ b/ConsultarAsignaturas.html
@@ -69,42 +69,42 @@
 				<tr>
 					<td>Carrera</td>
 					<td>Nombre</td>
-					<td>Modalidad</td>
+					<td class="mediano">Modalidad</td>
 					<td>Carácter</td>
-					<td>Horas al semestre</td>
-					<td>Horas a la semana</td>
-					<td>Horas teóricas</td>
-					<td>Horasprácticas</td>
-					<td>Horas de laboratorio</td>
-					<td>Créditos</td>
-					<td>Seriación</td>
+					<td class="chiquito">Horas al semestre</td>
+					<td class="chiquito">Horas a la semana</td>
+					<td class="chiquito">Horas teóricas</td>
+					<td class="chiquito">Horasprácticas</td>
+					<td class="chiquito">Horas de laboratorio</td>
+					<td class="chiquito">Créditos</td>
+					<td class="chiquito">Seriación</td>
 					<td>Seriación subsecuente</td>
 					<td>Seriación antecedente</td>
 				</tr>
 				<tr>
 					<td>Derecho</td>
 					<td>Derecho penal I</td>
-					<td>Taller</td>
+					<td class="mediano">Taller</td>
 					<td>Obligatorio</td>
-					<td>80</td>
-					<td>5</td>
-					<td>70</td>
-					<td>10</td>
-					<td>00</td>
-					<td>si</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">5</td>
+					<td class="chiquito">70</td>
+					<td class="chiquito">10</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">si</td>
 					<td>Introducción al derecho</td>
 					<td>Derecho penal II</td>
 				</tr>
 				<tr>
 					<td>Matemáticas Aplicadas y Computación</td>
 					<td>Álgebra Superior I</td>
-					<td>Curso</td>
+					<td class="mediano">Curso</td>
 					<td>Obligatorio</td>
-					<td>80</td>
-					<td>80</td>
-					<td>00</td>
-					<td>00</td>
-					<td>si</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">si</td>
 					<td>--</td>
 					<td>Algebra Superior II</td>
 				</tr>
