--- a/AgregarJefesCarrera.html
+++ b/AgregarJefesCarrera.html
@@ -63,18 +63,9 @@
 
 		<div id="areaDeTrabajo">
 			<center>
-				<h2> Agregar Jefe de Carrera</h2>
+				<h2>Agregar Jefe de Carrera.</h2>
 			</center>
 			
-		<input type="button" value="Agregar" onclick="gotoAdd();"/>
-		</center>
-	</body>
- </html>
-
- <script>
-	function gotoAdd(){
-		window.location="AgregarJefesCarrera.html";
-	}
 		</div>
 
 	</div>
