--- a/ConsultarSalones.html
+++ b/ConsultarSalones.html
@@ -66,22 +66,22 @@
 				<h2>Salones</h2>
 				<table class="catalog">
 					<tr>
-						<td>Salón</td>
-						<td>Edificio</td>
+						<td class="mediano">Salón</td>
+						<td class="mediano">Edificio</td>
 						<td>División</td>
-						<td>Cupo</td>
+						<td class="chiquito">Cupo</td>
 					</tr>
 					<tr>
-						<td>A121</td>
-						<td>A1</td>
+						<td class="mediano">A121</td>
+						<td class="mediano">A1</td>
 						<td>División de Humanidades</td>
-						<td>40</td>
+						<td class="chiquito">40</td>
 					</tr>
 					<tr>
-						<td>A211</td>
-						<td>A2</td>
+						<td class="mediano">A211</td>
+						<td class="mediano">A2</td>
 						<td>División de Ciencias Jurídicas</td>
-						<td>25</td>
+						<td class="chiquito">25</td>
 					</tr>
 				</table>
 			</center>
