--- a/EditarAsignaturas.html
+++ b/EditarAsignaturas.html
@@ -69,32 +69,33 @@
 				<tr>
 					<td>Carrera</td>
 					<td>Nombre</td>
-					<td>Modalidad</td>
-					<td>Carácter</td>
-					<td>Horas al semestre</td>
-					<td>Horas a la semana</td>
-					<td>Horas teóricas</td>
-					<td>Horasprácticas</td>
-					<td>Horas de laboratorio</td>
-					<td>Créditos</td>
-					<td>Seriación</td>
+					<td class="mediano">Modalidad</td>
+					<td class="mediano">Carácter</td>
+					<td class="chiquito">Horas al semestre</td>
+					<td class="chiquito">Horas a la semana</td>
+					<td class="chiquito">Horas teóricas</td>
+					<td class="chiquito">Horasprácticas</td>
+					<td class="chiquito">Horas de laboratorio</td>
+					<td class="chiquito">Créditos</td>
+					<td class="chiquito">Seriación</td>
 					<td>Seriación subsecuente</td>
 					<td>Seriación antecedente</td>
-					<td>Editar</td>
-					<td>Eliminar</td>
+					<td class="mediano">Editar</td>
+					<td>class="mediano"Eliminar</td>
+					<td >Eliminar</td>
 				</tr>
 				<tr>
 					<td>Derecho</td>
 					<td>Derecho penal I</td>
 					<td>Taller</td>
 					<td>Obligatorio</td>
-					<td>80</td>
-					<td>5</td>
-					<td>70</td>
-					<td>10</td>
-					<td>00</td>
-					<td>10</td>
-					<td>si</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">5</td>
+					<td class="chiquito">70</td>
+					<td class="chiquito">10</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">10</td>
+					<td class="chiquito">si</td>
 					<td>Introducción al derecho</td>
 					<td>Derecho penal II</td>
 					<td><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
@@ -103,19 +104,19 @@
 				<tr>
 					<td>Matemáticas Aplicadas y Computación</td>
 					<td>Álgebra Superior I</td>
-					<td>Curso</td>
+					<td  class="mediano">Curso</td>
 					<td>Obligatorio</td>
-					<td>80</td>
-					<td>80</td>
-					<td>00</td>
-					<td>00</td>
-					<td>10</td>
-					<td>si</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">5</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">10</td>
+					<td class="chiquito">si</td>
 					<td>--</td>
 					<td>Algebra Superior II</td>
-					<td></td>
-					<td><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
-					<td><img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
+					<td class="mediano"><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
+					<td class="mediano"><img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
 				</tr>
 			</table>
 		</div>
