EditarJefescarrera y FormularioJefesCarrera corregido

--- a/EditarJefesCarrera.html
+++ b/EditarJefesCarrera.html
@@ -63,61 +63,48 @@
 
 		<div id="areaDeTrabajo">
 			<center>
-				<h2> Asignaturas</h2>
+				<h2> Jefes de carrera</h2>
 			</center>
-			<table class="catalog">
+<table class="catalog">
 				<tr>
-					<td>Carrera</td>
 					<td>Nombre</td>
-					<td class="mediano">Modalidad</td>
-					<td class="mediano">Carácter</td>
-					<td class="chiquito">Horas al semestre</td>
-					<td class="chiquito">Horas a la semana</td>
-					<td class="chiquito">Horas teóricas</td>
-					<td class="chiquito">Horasprácticas</td>
-					<td class="chiquito">Horas de laboratorio</td>
-					<td class="chiquito">Créditos</td>
-					<td class="chiquito">Seriación</td>
-					<td>Seriación subsecuente</td>
-					<td>Seriación antecedente</td>
-					<td class="mediano">Editar</td>
-					<td class="mediano">Eliminar</td>
-				</tr>
+					<td>Apellido Paterno</td>
+					<td>Apellido Materno</td>
+					<td>Nivel Académico</td>
+					<td>Estudio</td>
+					<td>Domicilio Particular</td>
+					<td>Domicilio Laboral</td>
+					<td>Puesto</td>
+					<td>Estado</td>
+					<td>Editar</td>
+
+				</tr>	
 				<tr>
-					<td>Derecho</td>
-					<td>Derecho penal I</td>
-					<td>Taller</td>
-					<td>Obligatorio</td>
-					<td class="chiquito">80</td>
-					<td class="chiquito">5</td>
-					<td class="chiquito">70</td>
-					<td class="chiquito">10</td>
-					<td class="chiquito">00</td>
-					<td class="chiquito">10</td>
-					<td class="chiquito">si</td>
-					<td>Introducción al derecho</td>
-					<td>Derecho penal II</td>
+					<td>Gabriela</td>
+					<td>Martínez</td>
+					<td>Quezada</td>
+					<td>Licenciatura</td>
+					<td>Matemáticas Aplicadas</td>
+					<td>Iztapalapa</td>
+					<td>Naucalpan Col. Santa Cruz Acatlán</td>
+					<td>Jefe de carrera</td>
+					<td>Activo</td>
 					<td><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
-					<td><img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
 				</tr>
 				<tr>
-					<td>Matemáticas Aplicadas y Computación</td>
-					<td>Álgebra Superior I</td>
-					<td  class="mediano">Curso</td>
-					<td>Obligatorio</td>
-					<td class="chiquito">80</td>
-					<td class="chiquito">5</td>
-					<td class="chiquito">80</td>
-					<td class="chiquito">00</td>
-					<td class="chiquito">00</td>
-					<td class="chiquito">10</td>
-					<td class="chiquito">si</td>
-					<td>--</td>
-					<td>Algebra Superior II</td>
-					<td class="mediano"><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
-					<td class="mediano"><img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
+					<td>Germán</td>
+					<td>Zapata</td>
+					<td>Ledesma</td>
+					<td>Licenciatura</td>
+					<td>Matemáticas Aplicadas</td>
+					<td>Iztapalapa</td>
+					<td>Naucalpan Col. Santa Cruz Acatlán</td>
+					<td>Jefe de carrera</td>
+					<td>Activo</td>
+					<td><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
 				</tr>
 			</table>
+
 		</div>
 
 	</div>
