EditarJefescarrera y FormularioJefesCarrera corregido

--- a/ConsultarAsignaturas.html
+++ b/ConsultarAsignaturas.html
@@ -74,7 +74,7 @@
 					<td class="chiquito">Horas al semestre</td>
 					<td class="chiquito">Horas a la semana</td>
 					<td class="chiquito">Horas teóricas</td>
-					<td class="chiquito">Horasprácticas</td>
+					<td class="chiquito">Horas prácticas</td>
 					<td class="chiquito">Horas de laboratorio</td>
 					<td class="chiquito">Créditos</td>
 					<td class="chiquito">Seriación</td>
@@ -91,6 +91,7 @@
 					<td class="chiquito">70</td>
 					<td class="chiquito">10</td>
 					<td class="chiquito">00</td>
+					<td class="chiquito">10</td>
 					<td class="chiquito">si</td>
 					<td>Introducción al derecho</td>
 					<td>Derecho penal II</td>
@@ -101,9 +102,11 @@
 					<td class="mediano">Curso</td>
 					<td>Obligatorio</td>
 					<td class="chiquito">80</td>
+					<td class="chiquito">5</td>
 					<td class="chiquito">80</td>
 					<td class="chiquito">00</td>
 					<td class="chiquito">00</td>
+					<td class="chiquito">10</td>
 					<td class="chiquito">si</td>
 					<td>--</td>
 					<td>Algebra Superior II</td>
