--- a/ConsultarJefesCarrera.html
+++ b/ConsultarJefesCarrera.html
@@ -80,7 +80,7 @@
 					<td>Domicilio Particular</td>
 					<td>Domicilio Laboral</td>
 					<td>Puesto</td>
-					<td>Estado</td>
+					<td class="mediano">Estado</td>
 				</tr>	
 				<tr>
 					<td>Gabriela</td>
@@ -91,7 +91,7 @@
 					<td>Iztapalapa</td>
 					<td>Naucalpan Col. Santa Cruz Acatlán</td>
 					<td>Jefe de carrera</td>
-					<td>Activo</td>
+					<td class="mediano">Activo</td>
 				</tr>
 				<tr>
 					<td>Germán</td>
@@ -102,7 +102,7 @@
 					<td>Iztapalapa</td>
 					<td>Naucalpan Col. Santa Cruz Acatlán</td>
 					<td>Jefe de carrera</td>
-					<td>Activo</td>
+					<td class="mediano">Activo</td>
 				</tr>
 			</table>
 
