--- a/ConsultarProfesores.html
+++ b/ConsultarProfesores.html
@@ -72,7 +72,7 @@
 					<td>Apellido paterno</td>
 					<td>Apellido materno</td>
 					<td>Contraseña</td>
-					<td>Estado</td>
+					<td class="mediano">Estado</td>
 				</tr>
 				<tr>
 					<td>caen</td>
@@ -80,7 +80,7 @@
 					<td>Escalona</td>
 					<td>Navarro</td>
 					<td>12345</td>
-					<td>Activo</td>
+					<td class="mediano">Activo</td>
 				</tr>
 				<tr>
 					<td>alex</td>
@@ -88,7 +88,7 @@
 					<td>Hernández</td>
 					<td>Calderón</td>
 					<td>12345</td>
-					<td>Inactivo</td>
+					<td class="mediano">Inactivo</td>
 
 				</tr>
 				<tr>
@@ -97,7 +97,7 @@
 					<td>Jaramillo</td>
 					<td>Sánchez</td>
 					<td>12345</td>
-					<td>Activo</td>
+					<td class="mediano">Activo</td>
 				</tr>
 				<tr>
 					<td>isma</td>
@@ -105,7 +105,7 @@
 					<td>Servín</td>
 					<td>Sandoval</td>
 					<td>12345</td>
-					<td>Activo</td>
+					<td class="mediano">Activo</td>
 				</tr>
 				<tr>
 					<td>elias</td>
@@ -113,7 +113,7 @@
 					<td>Jiménez</td>
 					<td>Cárdenas</td>
 					<td>12345</td>
-					<td>Inactivo</td>
+					<td class="mediano">Inactivo</td>
 				</tr>
 			</table>
 		</div>
