--- a/EditarAsignaturas.html
+++ b/EditarAsignaturas.html
@@ -70,11 +70,11 @@
 					<td>Carrera</td>
 					<td>Nombre</td>
 					<td class="mediano">Modalidad</td>
-					<td class="mediano">Carácter</td>
+					<td>Carácter</td>
 					<td class="chiquito">Horas al semestre</td>
 					<td class="chiquito">Horas a la semana</td>
 					<td class="chiquito">Horas teóricas</td>
-					<td class="chiquito">Horasprácticas</td>
+					<td class="chiquito">Horas prácticas</td>
 					<td class="chiquito">Horas de laboratorio</td>
 					<td class="chiquito">Créditos</td>
 					<td class="chiquito">Seriación</td>
@@ -86,7 +86,7 @@
 				<tr>
 					<td>Derecho</td>
 					<td>Derecho penal I</td>
-					<td>Taller</td>
+					<td class="mediano">Taller</td>
 					<td>Obligatorio</td>
 					<td class="chiquito">80</td>
 					<td class="chiquito">5</td>
@@ -97,13 +97,13 @@
 					<td class="chiquito">si</td>
 					<td>Introducción al derecho</td>
 					<td>Derecho penal II</td>
-					<td><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
-					<td><img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
+					<td class="mediano"><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
+					<td class="mediano"><img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
 				</tr>
 				<tr>
 					<td>Matemáticas Aplicadas y Computación</td>
 					<td>Álgebra Superior I</td>
-					<td  class="mediano">Curso</td>
+					<td class="mediano">Curso</td>
 					<td>Obligatorio</td>
 					<td class="chiquito">80</td>
 					<td class="chiquito">5</td>
