--- a/EditarJefesCarrera.html
+++ b/EditarJefesCarrera.html
@@ -75,8 +75,8 @@
 					<td>Domicilio Particular</td>
 					<td>Domicilio Laboral</td>
 					<td>Puesto</td>
-					<td>Estado</td>
-					<td>Editar</td>
+					<td class="mediano">Estado</td>
+					<td class="mediano">Editar</td>
 
 				</tr>	
 				<tr>
@@ -88,8 +88,8 @@
 					<td>Iztapalapa</td>
 					<td>Naucalpan Col. Santa Cruz Acatlán</td>
 					<td>Jefe de carrera</td>
-					<td>Activo</td>
-					<td><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
+					<td class="mediano">Activo</td>
+					<td class="mediano"><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
 				</tr>
 				<tr>
 					<td>Germán</td>
@@ -100,8 +100,8 @@
 					<td>Iztapalapa</td>
 					<td>Naucalpan Col. Santa Cruz Acatlán</td>
 					<td>Jefe de carrera</td>
-					<td>Activo</td>
-					<td><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
+					<td class="mediano">Activo</td>
+					<td class="mediano"><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
 				</tr>
 			</table>
 
