--- a/EditarSalones.html
+++ b/EditarSalones.html
@@ -63,8 +63,34 @@
 
 		<div id="areaDeTrabajo">
 			<center>
-				<h2> Area de trabajo </h2>
+				<h2>Salones</h2>
 			</center>
+			<table class="catalog">
+					<tr>
+						<td class="mediano">Salón</td>
+						<td class="mediano">Edificio</td>
+						<td>División</td>
+						<td class="chiquito">Cupo</td>
+						<td class="mediano">Editar</td>
+						<td class="mediano">Eliminar</td>
+					</tr>
+					<tr>
+						<td class="mediano">A121</td>
+						<td class="mediano">A1</td>
+						<td>División de Humanidades</td>
+						<td class="chiquito">40</td>
+						<td class="mediano"><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
+						<td class="mediano"><img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
+					</tr>
+					<tr>
+						<td class="mediano">A211</td>
+						<td class="mediano">A2</td>
+						<td>División de Ciencias Jurídicas</td>
+						<td class="chiquito">25</td>
+						<td class="mediano"><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
+						<td class="mediano"><img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
+					</tr>
+				</table>
 		</div>
 
 	</div>
