--- a/EditarAsignaturas.html
+++ b/EditarAsignaturas.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/main.js" ></script>
 	<script type="text/javascript" src="js/menu.js" ></script>
+	<script type="text/javascript" src="js/alertify.js" ></script>
+	<script type="text/javascript" src="js/dialogs.js" ></script>
 	<meta charset="UTF-8">
 	<title>
 		Sistema de Asignación de Horarios y Salones
@@ -97,8 +99,8 @@
 					<td class="chiquito">si</td>
 					<td>Introducción al derecho</td>
 					<td>Derecho penal II</td>
-					<td class="mediano"><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
-					<td class="mediano"><img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
+					<td class="mediano"><a href = "FormularioAsignaturas.html"><img class="button" src="img/edit-icon.png"></a></td>
+					<td class="mediano"><img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos')"></td>
 				</tr>
 				<tr>
 					<td>Matemáticas Aplicadas y Computación</td>
