--- a/Index.html
+++ b/Index.html
@@ -54,7 +54,14 @@
 <body>
 <img src="img/header.png" style="width: 90%; margin-left: 5.5%;">
 
-<div id="navegacion"> 
+
+<div id="navegacion">
+
+
+
+	</div>
+
+<div id="navegacion">
 
 </div>
 
