--- a/ConsultarAsignaturas.html
+++ b/ConsultarAsignaturas.html
@@ -17,6 +17,17 @@
 
 <body>
 	<img src="img/header.png" style="width: 90%; margin-left: 5.5%;">
+	<div id="navegacion">
+
+	<a id= "inicio" href="Index.html">Inicio</a>
+	<img  height="16" width="16" src="img/house.png">
+	<span id ="saludo">
+	Conectado como Jefe de carrera
+	</span>
+	<a id = "salir" href="Index.html"> Salir </a>
+	<img height="16" width="16" src="img/salir.png" style="margin-right: -47px;float: right;">
+
+	</div>
 
 	<div id="menu1">
 
@@ -51,11 +62,11 @@
 						<li><a href="EditarAsignaturas.html">Eliminar</a></li>
 					</ul>
 				</li>
-  				<li class="nivel1"><a href="SolicitudAsignaturas.html">Solicitudes de asignaturas</a>	
+  				<li class="nivel1"><a href="SolicitudAsignaturas.html">Solicitudes de asignaturas</a>
 				</li>
-  				<li class="nivel1"><a href="SolicitudAsignaturasNuevas.html">Solicitudes de asignaturas nuevas</a>	
+  				<li class="nivel1"><a href="SolicitudAsignaturasNuevas.html">Solicitudes de asignaturas nuevas</a>
 				</li>
-				<li class="nivel1"><a>Lista Asignaturas-Profesor</a>	
+				<li class="nivel1"><a>Lista Asignaturas-Profesor</a>
 				</li>
 			</ul>
 		</div>
