--- a/ConsultarJefesCarrera.html
+++ b/ConsultarJefesCarrera.html
@@ -21,6 +21,17 @@
 
 <body>
 <img src="img/header.png" style="width: 90%; margin-left: 5.5%;">
+	<div id="navegacion">
+
+	<a id= "inicio" href="Index.html">Inicio</a>
+	<img  height="16" width="16" src="img/house.png">
+	<span id ="saludo">
+	Conectado como Jefe de carrera
+	</span>
+	<a id = "salir" href="Index.html"> Salir </a>
+	<img height="16" width="16" src="img/salir.png" style="margin-right: -47px;float: right;">
+
+	</div>
 
 	<div id="menu1">
 
@@ -81,7 +92,7 @@
 					<td>Domicilio Laboral</td>
 					<td>Puesto</td>
 					<td class="mediano">Estado</td>
-				</tr>	
+				</tr>
 				<tr>
 					<td>Gabriela</td>
 					<td>Martínez</td>
