--- a/IndexProfesor.html
+++ b/IndexProfesor.html
@@ -17,16 +17,26 @@
 
 <body>
 	<img src="img/header.png" style="width: 90%; margin-left: 5.5%;">
+	<div id="navegacion">
 
+	<a id= "inicio" href="Index.html">Inicio</a>
+	<img  height="16" width="16" src="img/house.png">
+	<span id ="saludo">
+	Conectado como Profesor
+	</span>
+	<a id = "salir" href="Index.html"> Salir </a>
+	<img height="16" width="16" src="img/salir.png" style="margin-right: -47px;float: right;">
+
+	</div>
 	<div id="menu1">
 
 		<div id="menu">
 			<ul>
-  				<li class="nivel1"><a href="EditarPerfil.html">Editar perfil</a>	
+  				<li class="nivel1"><a href="EditarPerfil.html">Editar perfil</a>
 				</li>
-  				<li class="nivel1"><a href="SolicitarAsignaturas.html">Solicitar asignatura</a>	
+  				<li class="nivel1"><a href="SolicitarAsignaturas.html">Solicitar asignatura</a>
 				</li>
-				<li class="nivel1"><a>Lista Asignaturas-Profesor</a>	
+				<li class="nivel1"><a>Lista Asignaturas-Profesor</a>
 				</li>
 			</ul>
 		</div>
