--- a/SolicitudAsignaturas.html
+++ b/SolicitudAsignaturas.html
@@ -22,7 +22,7 @@
 	<a id= "inicio" href="Index.html">Inicio</a>
 	<img  height="16" width="16" src="img/house.png">
 	<span id ="saludo">
-	Conectado como Profesor
+	Conectado como Jefe de carrera
 	</span>
 	<a id = "salir" href="Index.html"> Salir </a>
 	<img height="16" width="16" src="img/salir.png" style="margin-right: -47px;float: right;">
