primer formulario con estilo

--- a/AgregarJefesCarrera.html
+++ b/AgregarJefesCarrera.html
@@ -76,9 +76,60 @@
 
 
 		<div id="areaDeTrabajo">
-			<center>
+
+<form class="contact_form" action="#" id="contact_form" runat="server">
+		<div>
+
+			<ul>
+				<li>
 				<h2>Agregar Jefe de Carrera.</h2>
-			</center>
+				<span class="required_notification">* Datos requeridos</span>
+				</li>
+				<li>
+				<label for="name">Nombre:</label>
+				<input type="text" placeholder="Carlos Augusto" required />
+
+				<label for="name">Apellido Paterno:</label>
+				<input type="text" placeholder="Escalona" required />
+
+				<label for="name">Apellido Materno:</label>
+				<input type="text" placeholder="Navarro" required />
+				</li>
+
+
+
+				<li>
+				<label for="name" class="uno">Nivel Académico:</label>
+				<input type="text" placeholder="Licenciado" required />
+
+				<label for="name" class="dos">Estudio:</label>
+				<input type="text" placeholder="UNAM" required />
+				</li>
+
+				<li>
+				<label for="name" class="uno">Domicilio Particular:</label>
+				<input type="text" placeholder="2° calle de rodolfo .." required />
+
+				<label for="name" class="dos">Domicilio Laboral:</label>
+				<input type="text" placeholder="UNAM" required />
+
+				</li>
+
+				<li>
+				<label for="name" class="uno">Puesto:</label>
+				<input type="text" placeholder="Jefe de carrera" required />
+
+				<label for="name" class="dos">Estado:</label>
+				<input type="text" placeholder="Activo / Inactivo" required />
+
+				</li>
+
+
+				<li> <button class="submit" type="submit">Aceptar</button> </li>
+			</ul>
+
+		</div>
+		</form>
 
 		</div>
 
