--- a/JefesCarrera/ConsultarHorarios.html
+++ b/JefesCarrera/ConsultarHorarios.html
@@ -32,11 +32,11 @@
 
 		<div id="menu">
 			<ul>
-  				<li class="nivel1 primera"><a>Jefes de carrera</a>
+				<li class = "nivel1 primera"><a href="EditarJefesCarrera.html">Editar Perfil</a></li>
+  				<li class="nivel1 "><a>Jefes de carrera</a>
 				<ul>
 					<li><a href="ConsultarJefesCarrera.html">Consultar</a></li>
 					<li><a href="AgregarJefesCarrera.html">Agregar</a></li>
-					<li><a href="EditarJefesCarrera.html">Editar</a></li>
 				</ul>
 			  	</li>
   				<li class="nivel1"><a>Profesores</a>
