--- a/JefesCarrera/ConsultarSalones.html
+++ b/JefesCarrera/ConsultarSalones.html
@@ -33,11 +33,11 @@
 
 		<div id="menu">
 			<ul>
-  				<li class="nivel1 primera"><a>Jefes de carrera</a>
+				<li class = "nivel1 primera"><a href="EditarJefesCarrera.html">Editar Perfil</a></li>
+  				<li class="nivel1"><a>Jefes de carrera</a>
 				<ul>
 					<li><a href="ConsultarJefesCarrera.html">Consultar</a></li>
 					<li><a href="AgregarJefesCarrera.html">Agregar</a></li>
-					<li><a href="EditarJefesCarrera.html">Editar</a></li>
 				</ul>
 			  	</li>
   				<li class="nivel1"><a>Profesores</a>
@@ -74,53 +74,26 @@
 
 		<div id="areaDeTrabajo">
 			<center>
-				<h2>Asignaturas</h2>
+				<h2>Salones</h2>
 			</center>
 			<table class="catalog">
 				<tr>
-					<td>Carrera</td>
-					<td>Nombre</td>
-					<td class="mediano">Modalidad</td>
-					<td>Carácter</td>
-					<td class="chiquito">Horas al semestre</td>
-					<td class="chiquito">Horas a la semana</td>
-					<td class="chiquito">Horas teóricas</td>
-					<td class="chiquito">Horas prácticas</td>
-					<td class="chiquito">Horas de laboratorio</td>
-					<td class="chiquito">Créditos</td>
-					<td class="chiquito">Seriación</td>
-					<td>Seriación subsecuente</td>
-					<td>Seriación antecedente</td>
+					<td class="mediano">Salón</td>
+					<td class="mediano">Edificio</td>
+					<td>División</td>
+					<td class="chiquito">Cupo</td>
 				</tr>
 				<tr>
-					<td>Derecho</td>
-					<td>Derecho penal I</td>
-					<td class="mediano">Taller</td>
-					<td>Obligatorio</td>
-					<td class="chiquito">80</td>
-					<td class="chiquito">5</td>
-					<td class="chiquito">70</td>
-					<td class="chiquito">10</td>
-					<td class="chiquito">00</td>
-					<td class="chiquito">10</td>
-					<td class="chiquito">si</td>
-					<td>Introducción al derecho</td>
-					<td>Derecho penal II</td>
+					<td class="mediano">A121</td>
+					<td class="mediano">A1</td>
+					<td>División de Humanidades</td>
+					<td class="chiquito">40</td>
 				</tr>
 				<tr>
-					<td>Matemáticas Aplicadas y Computación</td>
-					<td>Álgebra Superior I</td>
-					<td class="mediano">Curso</td>
-					<td>Obligatorio</td>
-					<td class="chiquito">80</td>
-					<td class="chiquito">5</td>
-					<td class="chiquito">80</td>
-					<td class="chiquito">00</td>
-					<td class="chiquito">00</td>
-					<td class="chiquito">10</td>
-					<td class="chiquito">si</td>
-					<td>--</td>
-					<td>Algebra Superior II</td>
+					<td class="mediano">A211</td>
+					<td class="mediano">A2</td>
+					<td>División de Ciencias Jurídicas</td>
+					<td class="chiquito">25</td>
 				</tr>
 			</table>
 		</div>
