--- a/JefesCarrera/ConsultarJefesCarrera.html
+++ b/JefesCarrera/ConsultarJefesCarrera.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/main.js" ></script>
 	<script type="text/javascript" src="js/menu.js" ></script>
+	<script src="js/alertify.min.js"></script>
+	<link rel="stylesheet" href="css/alertify.core.css" />
+
+	<script src="js/dialogs.js"></script>
 	<meta charset="UTF-8">
 	<title>
 		Sistema de Asignación de Horarios y Salones
@@ -16,7 +20,7 @@
 </head>
 
 <body>
-	<img src="img/header.png" style="width: 90%; margin-left: 5.5%;">
+<img src="img/header.png" style="width: 90%; margin-left: 5.5%;">
 	<div id="navegacion">
 
 	<a id= "inicio" href="Index.html">Inicio</a>
@@ -33,11 +37,11 @@
 
 		<div id="menu">
 			<ul>
-  				<li class="nivel1 primera"><a>Jefes de carrera</a>
+				<li class = "nivel1 primera"><a href="EditarJefesCarrera.html">Editar Perfil</a></li>
+  				<li class="nivel1"><a>Jefes de carrera</a>
 				<ul>
 					<li><a href="ConsultarJefesCarrera.html">Consultar</a></li>
 					<li><a href="AgregarJefesCarrera.html">Agregar</a></li>
-					<li><a href="EditarJefesCarrera.html">Editar</a></li>
 				</ul>
 			  	</li>
   				<li class="nivel1"><a>Profesores</a>
@@ -74,11 +78,47 @@
 
 		<div id="areaDeTrabajo">
 			<center>
-				<h2> Agregar Profesor. </h2>
+				<h2>Jefes de Carrera </h2>
 			</center>
+
+			<table class="catalog">
+				<tr>
+					<td>Nombre</td>
+					<td>Apellido Paterno</td>
+					<td>Apellido Materno</td>
+					<td>Nivel Académico</td>
+					<td>Estudio</td>
+					<td>Domicilio Particular</td>
+					<td>Domicilio Laboral</td>
+					<td>Puesto</td>
+					<td class="mediano">Estado</td>
+				</tr>
+				<tr>
+					<td>Gabriela</td>
+					<td>Martínez</td>
+					<td>Quezada</td>
+					<td>Licenciatura</td>
+					<td>Matemáticas Aplicadas</td>
+					<td>Iztapalapa</td>
+					<td>Naucalpan Col. Santa Cruz Acatlán</td>
+					<td>Jefe de carrera</td>
+					<td class="mediano">Activo</td>
+				</tr>
+				<tr>
+					<td>Germán</td>
+					<td>Zapata</td>
+					<td>Ledesma</td>
+					<td>Licenciatura</td>
+					<td>Matemáticas Aplicadas</td>
+					<td>Iztapalapa</td>
+					<td>Naucalpan Col. Santa Cruz Acatlán</td>
+					<td>Jefe de carrera</td>
+					<td class="mediano">Activo</td>
+				</tr>
+			</table>
+
 		</div>
 
 	</div>
 
 </body>
-</html>
