--- a/JefesCarrera/AgregarJefesCarrera.html
+++ b/JefesCarrera/AgregarJefesCarrera.html
@@ -99,27 +99,13 @@
 
 
 				<li>
-				<label for="name" class="uno">Nivel Académico:</label>
-				<input type="text" placeholder="Licenciado" required />
+				<label for="name" >Usuario:</label>
+				<input type="text" placeholder="Caen" required />
 
-				<label for="name" class="dos">Estudio:</label>
-				<input type="text" placeholder="UNAM" required />
-				</li>
+				<label for="name" >Contraseña:</label>
+				<input type="password"  required />
 
-				<li>
-				<label for="name" class="uno">Domicilio Particular:</label>
-				<input type="text" placeholder="2° calle de rodolfo .." required />
-
-				<label for="name" class="dos">Domicilio Laboral:</label>
-				<input type="text" placeholder="UNAM" required />
-
-				</li>
-
-				<li>
-				<label for="name" class="uno">Puesto:</label>
-				<input type="text" placeholder="Jefe de carrera" required />
-
-				<label for="name" class="dos">Estado:</label>
+				<label for="name" >Estado:</label>
 				<input type="text" placeholder="Activo / Inactivo" required />
 
 				</li>
